se creo la entidad Configuracion Usuario: con el proposito de que el usuario pueda cambiar, tema, contraseña y lenguaje